# sigil

./: .gitignore  .mcp.json  Cargo.toml  README.md  cdd.config.toml  cdd.config.yaml  sigil.config.toml
.github/workflows/: build.yml
contracts/: agent-instructions.contract.toml  agent-instructions.contract.yaml  check-structural.contract.yaml  config-loading.contract.toml  config-loading.contract.yaml  contract-schema-validation.contract.toml  contract-schema-validation.contract.yaml  create-contract.contract.toml  create-contract.contract.yaml  delete-contract.contract.toml  delete-contract.contract.yaml  filename-id-consistency.contract.toml  filename-id-consistency.contract.yaml  find-related-contracts.contract.yaml  get-affected-contracts.contract.toml  get-affected-contracts.contract.yaml  get-contract-health.contract.yaml  get-contract.contract.toml  get-contract.contract.yaml  get-linked-tests.contract.yaml  get-notes.contract.toml  list-contracts.contract.toml  list-contracts.contract.yaml  review-changeset.contract.toml  review-changeset.contract.yaml  test-annotation-scanning.contract.yaml  update-contract.contract.toml  update-contract.contract.yaml  validate-all-contracts.contract.toml  validate-contract.contract.toml
docs/: agent-instructions.md
examples/: device-data-ingestion.contract.toml
schema/: contract.schema.json
src/: config.rs  main.rs  model.rs
src/tools/: create_contract.rs  delete_contract.rs  get_affected_contracts.rs  get_contract.rs  get_notes.rs  list_contracts.rs  loader.rs  mod.rs  review_changeset.rs  update_contract.rs  (+2 more)
